--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,14 @@
-<div class="content">
-  
+<div class="row">
+    <div class="col-md-6 ext-right center-btn">
+        <button mat-flat-button color="warn" class="style-btn">เริ่มธุรกิจ</button>
+    </div>
+    <div class="col-6 text-left center-btn">
+        <button mat-flat-button color="warn" class="style-btn">เข้าร่วมธุรกิจ</button>
+    </div>
+    <!-- <div class="col-6 col-sm-6 col-md-6 d-block d-sm-block d-md-none text-right center-btn-sm">
+        <button mat-flat-button color="warn" class="style-btn">เริ่มธุรกิจ</button>
+    </div>
+    <div class="col-6 col-sm-6 col-md-6 d-block d-sm-block d-md-none text-left center-btn-sm">
+        <button mat-flat-button color="warn" class="style-btn">เข้าร่วมธุรกิจ</button>
+    </div> -->
 </div>
