--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -16,3 +16,17 @@
 .green{
   background-color: #a9c85f !important;
 }
+
+.center-btn {
+  margin-top: 10rem;
+}
+
+.center-btn-sm {
+  margin-top: 15rem;
+}
+
+.style-btn {
+  width: 100%;
+  height: 20vw !important;
+  font-size: 5vw;
+}
