--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,11 +5,11 @@
 @import url('https://fonts.googleapis.com/css?family=Prompt:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic&subset=latin-ext');
 
 @import '~@angular/material/theming';
-// $custom-typography: mat-typography-config(
-//     $font-family: 'Itim'
-// );
-// @include mat-core($custom-typography);
+$custom-typography: mat-typography-config(
+    $font-family: 'Kanit'
+);
+@include mat-core($custom-typography);
 
-// body{
-//     font-family: 'Itim' !important;
-// }
+body{
+    font-family: 'Kanit' !important;
+}
