--- a/src/app/components/header-toolbar/header-toolbar.component.html
+++ b/src/app/components/header-toolbar/header-toolbar.component.html
@@ -12,7 +12,8 @@
       <span class="user-name" (click)="onRegister()">สมัครสมาชิก</span>
     </span>
     <span class="profile" *ngIf="userAuth" [matMenuTriggerFor]="profile">
-      <img [src]="userAuth.profileImageURL" class="img" alt="img">
+      <img src="https://res.cloudinary.com/dyiuidzsc/image/upload/v1548908205/web-sharing/no-image-user.jpg"
+        class="img">
       <span class="user-name">{{userAuth.username}}</span>
     </span>
     <mat-menu #profile="matMenu">
