--- a/src/app/modal/modal-create-team/modal-create-team.component.html
+++ b/src/app/modal/modal-create-team/modal-create-team.component.html
@@ -1,5 +1,26 @@
-<mat-card class="example-card">
-  <mat-card-content>
-    
-  </mat-card-content>
-</mat-card>
+<div class="row">
+  <div class="col-12">
+    <mat-form-field class="example-full-width">
+      <input maxlength="3" class="uppercase" matInput placeholder="รหัสทีม" [(ngModel)]="codeteam"
+        (ngModelChange)="uppercase(codeteam)">
+    </mat-form-field>
+  </div>
+  <div class="col-12">
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="ชื่อทีม" [(ngModel)]="nameteam">
+    </mat-form-field>
+  </div>
+  <div class="col-12">
+    <mat-form-field class="example-full-width ">
+      <textarea class="heigth-textarea" #message maxlength="250" matInput placeholder="รายละเอียดทีม"
+        [(ngModel)]="detailteam"></textarea>
+      <mat-hint align="end">{{message.value.length}} / 250</mat-hint>
+    </mat-form-field>
+  </div>
+  <div class="col-12 text-right">
+    <button class="mr-2" mat-stroked-button color="accent" (click)="cancel()">ยกเลิก</button>
+    <button class="sty-btn" mat-stroked-button color="accent" [disabled]="!codeteam||!nameteam||!detailteam"
+      (click)="save()">บันทึก</button>
+
+  </div>
+</div>
