--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row" style="display: flex;align-items: center;height: 90vh;">
     <div class="col-6 col-md-6 ext-right ">
-        <button mat-stroked-button color="accent" class="style-btn">เริ่มธุรกิจ</button>
+        <button mat-stroked-button color="accent" (click)="openDialog()" class="style-btn">เริ่มธุรกิจ</button>
     </div>
     <div class="col-6 col-md-6 text-left ">
         <button mat-stroked-button color="accent" class="style-btn">เข้าร่วมธุรกิจ</button>
