color border btn

--- a/src/app/modal/modal-create-team/modal-create-team.component.scss
+++ b/src/app/modal/modal-create-team/modal-create-team.component.scss
@@ -25,5 +25,5 @@
 .mat-icon-button[disabled],
 .mat-stroked-button[disabled] {
     cursor: default;
-    border-color: lightgray;
+    border-color: rgba(0,0,0,.12);
 }
