--- a/src/app/modal/modal-create-team/modal-create-team.component.html
+++ b/src/app/modal/modal-create-team/modal-create-team.component.html
@@ -17,7 +17,7 @@
       <mat-hint align="end">{{message.value.length}} / 250</mat-hint>
     </mat-form-field>
   </div>
-  <div class="col-12 text-right">
+  <div class="col-12 text-right mt-2">
     <button class="mr-2" mat-stroked-button color="accent" (click)="cancel()">ยกเลิก</button>
     <button class="sty-btn" mat-stroked-button color="accent" [disabled]="!codeteam||!nameteam||!detailteam"
       (click)="save()">บันทึก</button>
