--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,16 @@
 <!-- The content below is only a placeholder and can be replaced. -->
-<app-header-toolbar></app-header-toolbar>
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
-<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#ff9558" type="ball-atom">
-  <p style="font-size: 14px; color: white; margin-top: 14px;">กำลังโหลด...</p>
-</ngx-spinner>
+<mat-sidenav-container>
+  <app-header-toolbar></app-header-toolbar>
+  <mat-sidenav position="end" #appDrawer class="sidenav" mode="{{mode}}" opened="{{ opened }}">
+    <app-side-bar></app-side-bar>
+  </mat-sidenav>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+  <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#ff9558" type="ball-atom">
+    <p style="font-size: 14px; color: white; margin-top: 14px;">กำลังโหลด...</p>
+  </ngx-spinner>
+</mat-sidenav-container>
 <!-- <footer>
   <div class="row mt-5">
     <div class="col-12 text-center">
