--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,6 +3,6 @@
         <button mat-stroked-button color="accent" (click)="openDialog()" class="style-btn">เริ่มธุรกิจ</button>
     </div>
     <div class="col-6 col-md-6 text-left ">
-        <button mat-stroked-button color="accent" class="style-btn">เข้าร่วมธุรกิจ</button>
+        <button mat-stroked-button color="accent" (click)="createmember()" class="style-btn">เข้าร่วมธุรกิจ</button>
     </div>
 </div>
