--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -1,4 +1,14 @@
-<mat-toolbar color="primary">Menu</mat-toolbar>
+<mat-toolbar style="background-color: white;border-bottom: solid 1px  #e2e2e2">
+  <div class="row">
+    <div class="col-4 pr-0 pl-0 mr-2">
+      <img src="https://res.cloudinary.com/dyiuidzsc/image/upload/v1548908205/web-sharing/no-image-user.jpg"
+        class="img-profile">
+    </div>
+    <div class="col-7 pl-0 pr-0">
+      <p class="font-name mb-0">พลวัฒน์ ช่างเก็บ</p>
+    </div>
+  </div>
+</mat-toolbar>
 <mat-nav-list>
   <a mat-list-item href="#">Link 1</a>
   <a mat-list-item href="#">Link 2</a>
