--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- The content below is only a placeholder and can be replaced. -->
 <mat-sidenav-container>
   <app-header-toolbar></app-header-toolbar>
-  <mat-sidenav position="end" #appDrawer class="sidenav" mode="{{mode}}" opened="{{ opened }}">
+  <mat-sidenav position="end" #appDrawer class="sidenav" mode="{{mode}}" opened="{{ opened }}"  style="background-color:rgb(250, 250, 250)">
     <app-side-bar></app-side-bar>
   </mat-sidenav>
   <div class="container">
