--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,13 +1,11 @@
 <div class="content">
     <div class="row mt-5">
         <div class="col-md-7 col-sm-12">
-            <img class="cover" src="http://comunytek.com/wp-content/uploads/2017/03/Microservices.png"
-                alt="">
+            <img class="cover" src="http://comunytek.com/wp-content/uploads/2017/03/Microservices.png">
         </div>
-
         <div class="col-md-5 col-sm-12">
             <auth-login></auth-login>
         </div>
     </div>
-    
+
 </div>
