fix bug side menu

--- a/src/app/components/header-toolbar/header-toolbar.component.html
+++ b/src/app/components/header-toolbar/header-toolbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar style="background-color: white;border-bottom: solid 1px  #e2e2e2">
-  <mat-toolbar-row class="container">
+  <mat-toolbar-row class="pl-5 pr-5">
     <img class="app-logo cursor" (click)="clickToHome()"
       src="https://res.cloudinary.com/dyiuidzsc/image/upload/v1548991271/Rabu%20Rabu/perfect%20lips/LOGO-RABU.png">
     <span class="example-spacer"></span>
