--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -1,10 +1,8 @@
-
 <div class="row pt-2 pb-2" style="background-color: white;border-bottom: solid 1px  #e2e2e2">
   <div class="col-12 text-center">
     <!-- <img src="https://res.cloudinary.com/dyiuidzsc/image/upload/v1548908205/web-sharing/no-image-user.jpg"
       class="img-profile"> -->
-      <img src="./../../../assets/images/jigglypuff.png"
-      class="img-profile">
+    <img src="./../../../assets/images/jigglypuff.png" class="img-profile">
   </div>
   <div class="col-12 text-center">
     <p class="mb-0">{{userAuth.displayname}}</p>
