--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -15,7 +15,7 @@
         <img src="./../../../assets/images/shopping-bag.png" class="img-list">
         <span class="ml-3">การขาย</span>
       </a>
-      <a mat-list-item>
+      <a mat-list-item (click)="onManageMember();sidenavService.closeNav();">
         <img src="./../../../assets/images/work-team.png" class="img-list">
         <span class="ml-3">จัดสมาชิก</span>
       </a>
