--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row" style="display: flex;align-items: center;height: 90vh;">
-    <div class="col-6 col-md-6 ext-right ">
+    <div class="col-6 col-md-6 text-right ">
         <button mat-stroked-button color="accent" (click)="openDialog()" class="style-btn">เริ่มธุรกิจ</button>
     </div>
     <div class="col-6 col-md-6 text-left ">
