--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,6 +6,7 @@
         <div class="col-md-5 col-sm-12">
             <auth-login></auth-login>
         </div>
+        <button (click)="gogo()">dodo</button>
     </div>
 
 </div>
