--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-3 mt-3 border-list list-style list-add mr-3">
     <div class="col-12 text-center pr-0 pl-0">
-      <span class="btn-add-style">+</span>
+      <span class="btn-add-style cursor">+</span>
     </div>
   </div>
   <div class="col-3 mt-3 border-list list-style mr-3" *ngFor="let item of data">
