--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-3 mt-3 border-list list-style list-add mr-3">
-    <div class="col-12 text-center pr-0 pl-0">
+    <div class="col-12 text-center pr-0 pl-0" (click)="openmodal()">
       <span class="btn-add-style">+</span>
     </div>
   </div>
