--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -9,13 +9,14 @@
     </div>
   </div>
   <div class="col-6 pl-1 pr-1">
-    <div class="row">
-      <div class="col-12">
-        <p><span>ชื่อ: </span> <span>พลวัฒน์ช่างเก็บ</span></p>
-      </div>
-    </div>
-    <div class="border-order" style="width: 100%;height: 70%;">
 
+    <div class="border-order" style="width: 100%;height: 70%;">
+      <div class="row">
+        <div class="col-12">
+          <p class="ml-2"><span>ชื่อ: </span> <span>พลวัฒน์ช่างเก็บ</span></p>
+          <p class="ml-2"><span>ที่อยู่: </span> <span>59/51 หมู่ 2 ต.คูคต อ.ลำลูกกา จ.ปทุมธานี</span></p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
