--- a/src/app/modal/select-option/select-option.component.html
+++ b/src/app/modal/select-option/select-option.component.html
@@ -15,7 +15,7 @@
         </div>
       </div>
       <div class="col-12 text-right">
-        <button mat-button matStepperNext (click)="">Next</button>
+        <button mat-button matStepperNext >Next</button>
       </div>
     </form>
   </mat-step>
