--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -9,13 +9,53 @@
     </div>
   </div>
   <div class="col-6 pl-1 pr-1">
-
-    <div class="border-order" style="width: 100%;height: 70%;">
-      <div class="row">
-        <div class="col-12">
-          <p class="ml-2"><span>ชื่อ: </span> <span>พลวัฒน์ช่างเก็บ</span></p>
-          <p class="ml-2"><span>ที่อยู่: </span> <span>59/51 หมู่ 2 ต.คูคต อ.ลำลูกกา จ.ปทุมธานี</span></p>
+    <div class="row">
+      <div class="col-12">
+        <span>
+          <p class="ml-4"><span>ชื่อ: </span> <span>พลวัฒน์ช่างเก็บ</span></p>
+          <p class="ml-4"><span>ที่อยู่: </span> <span>59/51 หมู่ 2 ต.คูคต อ.ลำลูกกา จ.ปทุมธานี</span></p>
+        </span>
+      </div>
+    </div>
+    <div class="border-order" style="width: 100%;height: 65%;">
+      <span *ngFor="let item of [1,2,3,4]">
+        <div class="row mt-3">
+          <div class="col-4 text-left">
+            <p class="ml-4 mb-3"> <span>ลิปติก</span> <span>(#01)</span></p>
+          </div>
+          <div class="col-4 text-center">
+            <p class="mb-3"> <span>100</span> <span>*</span> <span>20</span></p>
+          </div>
+          <div class="col-4 text-right">
+            <p class="mr-4 mb-3"> <span>2000</span></p>
+          </div>
         </div>
+        <div class="row">
+          <div class="col-1"></div>
+          <div class="col-2 border-prod-list"></div>
+          <div class="col-2 border-prod-list"></div>
+          <div class="col-2 border-prod-list"></div>
+          <div class="col-2 border-prod-list"></div>
+          <div class="col-2 border-prod-list"></div>
+          <div class="col-1"></div>
+        </div>
+      </span>
+
+    </div>
+    <div class="row">
+      <div class="col-6 text-left">
+        <p class="ml-3 mt-3">รวม</p>
+      </div>
+      <div class="col-6 text-right">
+        <p class="mr-3 mt-3">2000</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        <button mat-stroked-button color="accent" class="btn-style">ยกเลิก</button>
+      </div>
+      <div class="col-6">
+        <button mat-stroked-button color="accent" class="btn-style btn-border-style">บันทึก</button>
       </div>
     </div>
   </div>
