--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -2,12 +2,13 @@
   <div class="col-6 pl-1 pr-1">
     <div class="border-order" style="width: 100%;height: 100%;">
       <div class="row pl-4 pr-3">
-        <div class="col-4 mt-2 pr-0 pl-0" style="display: inline;" *ngFor="let item of [1,2,3,4]">
-          <img class="img-prod-style" src="https://www.watsons.co.th/medias/sys_master/front/zoom/8915320700958.jpg">
+        <div class="col-4 mt-2 pr-0 pl-0" style="display: inline;" *ngFor="let item of prodData">
+          <img class="img-prod-style" [src]="item.image">
         </div>
       </div>
     </div>
   </div>
+
   <div class="col-6 pl-1 pr-1">
     <div class="row">
       <div class="col-12">
@@ -17,8 +18,9 @@
         </span>
       </div>
     </div>
-    <div class="border-order" style="width: 100%;height: 65%;">
-      <span *ngFor="let item of [1,2,3,4]">
+
+    <div class="border-order scroll" style="width: 100%;height: 346px;">
+      <span *ngFor="let item of [1,2,3,4,5,7]">
         <div class="row mt-3">
           <div class="col-4 text-left">
             <p class="ml-4 mb-3"> <span>ลิปติก</span> <span>(#01)</span></p>
@@ -40,8 +42,8 @@
           <div class="col-1"></div>
         </div>
       </span>
-
     </div>
+
     <div class="row">
       <div class="col-6 text-left">
         <p class="ml-3 mt-3">รวม</p>
@@ -50,6 +52,7 @@
         <p class="mr-3 mt-3">2000</p>
       </div>
     </div>
+
     <div class="row">
       <div class="col-6">
         <button mat-stroked-button color="accent" class="btn-style">ยกเลิก</button>
@@ -58,5 +61,6 @@
         <button mat-stroked-button color="accent" class="btn-style btn-border-style">บันทึก</button>
       </div>
     </div>
+
   </div>
 </div>
