--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-12">
     <mat-nav-list class="pt-0">
-      <a mat-list-item>
+      <a mat-list-item (click)="onOrderList();sidenavService.closeNav();">
         <img src="./../../../assets/images/shopping-bag.png" class="img-list">
         <span class="ml-3">การขาย</span>
       </a>
