--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -10,7 +10,8 @@
       <p class="mb-1 text-overflow"><span>ชื่อ: </span> <span class="mr-1">{{item.customer.firstname}}</span>
         <span>{{item.customer.lastname}}</span></p>
       <p class="mb-1 text-overflow"><span>โทร: </span> <span>{{item.customer.tel}}</span></p>
-      <p class="mb-1 text-overflow"><span>รวม: </span> <span>{{item.totalamount}}</span> <span>บาท</span></p>
+      <p class="mb-1 text-overflow"><span>รวม: </span> <span>{{item.totalamount?item.totalamount:0 }}</span>
+        <span>บาท</span></p>
     </div>
     <div class="col-12 pr-0 pl-0 mr-0 text-center">
       <button mat-stroked-button class="mr-2">เเก้ไข</button>
