--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -12,14 +12,15 @@
   <div class="col-6 pl-1 pr-1">
     <div class="row">
       <div class="col-12">
-        <span>
-          <p class="ml-4"><span>ชื่อ: </span> <span>พลวัฒน์ช่างเก็บ</span></p>
-          <p class="ml-4"><span>ที่อยู่: </span> <span>59/51 หมู่ 2 ต.คูคต อ.ลำลูกกา จ.ปทุมธานี</span></p>
+        <span class="font-address">
+          <p class="ml-2 mb-1"><span>ชื่อ: </span> <span class="mr-2">{{this.address.fname}}</span> <span>{{this.address.lname}}</span></p>
+          <p class="ml-2 mb-1"><span>ที่อยู่: </span> <span>{{this.address.address}}</span></p>
+          <p class="ml-2 mb-1"><span>เบอร์โทร: </span> <span>{{this.address.tel}}</span></p>
         </span>
       </div>
     </div>
 
-    <div class="border-order scroll" style="width: 100%;height: 346px;">
+    <div class="border-order scroll" style="width: 100%;height: 330px;">
       <span *ngFor="let item of [1,2,3,4,5,7]">
         <div class="row mt-3">
           <div class="col-4 text-left">
