--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -2,7 +2,8 @@
   <div class="col-6 pl-1 pr-1">
     <div class="border-order" style="width: 100%;height: 100%;">
       <div class="row pl-4 pr-3">
-        <div class="col-4 mt-2 pr-0 pl-0" style="display: inline;" *ngFor="let item of prodData">
+        <div class="col-4 mt-2 pr-0 pl-0" style="display: inline;" *ngFor="let item of prodData"
+          (click)="openmodal(item)">
           <img class="img-prod-style" [src]="item.image">
         </div>
       </div>
