--- a/src/app/modal/select-option/select-option.component.html
+++ b/src/app/modal/select-option/select-option.component.html
@@ -30,7 +30,7 @@
       <ng-template matStepLabel>ระบุจำนวน</ng-template>
       <div class="row">
         <div class="col-4 text-right">
-          <button mat-button class="border-add"><span class="font-size">-</span></button>
+          <!-- <button mat-button class="border-add"><span class="font-size">-</span></button> -->
         </div>
         <div class="col-4 border-num text-center">
           <mat-form-field class="example-full-width">
@@ -38,7 +38,7 @@
           </mat-form-field>
         </div>
         <div class="col-4 text-left">
-          <button mat-button class="border-add"> <span class="font-size">+</span> </button>
+          <!-- <button mat-button class="border-add"> <span class="font-size">+</span> </button> -->
         </div>
       </div>
 
