--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -14,24 +14,26 @@
     <div class="row">
       <div class="col-12">
         <span class="font-address">
-          <p class="ml-2 mb-1"><span>ชื่อ: </span> <span class="mr-2">{{this.address.fname}}</span> <span>{{this.address.lname}}</span></p>
-          <p class="ml-2 mb-1"><span>ที่อยู่: </span> <span>{{this.address.address}}</span></p>
-          <p class="ml-2 mb-1"><span>เบอร์โทร: </span> <span>{{this.address.tel}}</span></p>
+          <p class="ml-2 mb-1"><span>ชื่อ: </span> <span class="mr-2">{{address.fname}}</span>
+            <span>{{address.lname}}</span></p>
+          <p class="ml-2 mb-1"><span>ที่อยู่: </span> <span>{{address.address}}</span></p>
+          <p class="ml-2 mb-1"><span>เบอร์โทร: </span> <span>{{address.tel}}</span></p>
         </span>
       </div>
     </div>
 
     <div class="border-order scroll" style="width: 100%;height: 330px;">
-      <span *ngFor="let item of [1,2,3,4,5,7]">
+      <span *ngFor="let item of data.items">
         <div class="row mt-3">
           <div class="col-6 text-left">
-            <p class="ml-4 mb-3"> <span>ลิปติก</span> <span>(#01)</span></p>
+            <p class="ml-4 mb-3"> <span>{{item.name}}</span> <span>({{item.option[0].value}})</span></p>
           </div>
           <div class="col-3 text-center">
-            <p class="mb-3"> <span>100</span> <span>*</span> <span>20</span></p>
+            <p class="mb-3"> <span class="mr-1">{{item.price}}</span> <span class="mr-1">*</span> <span
+                class="mr-1">{{item.qty}}</span></p>
           </div>
           <div class="col-3 text-right">
-            <p class="mr-4 mb-3"> <span>2000</span></p>
+            <p class="mr-4 mb-3"> <span>{{item.amout}}</span></p>
           </div>
         </div>
         <div class="row">
@@ -51,7 +53,7 @@
         <p class="ml-3 mt-3">รวม</p>
       </div>
       <div class="col-6 text-right">
-        <p class="mr-3 mt-3"> <span>2000</span> <span> บาท</span></p>
+        <p class="mr-3 mt-3"> <span>{{data.totalamount}}</span> <span> บาท</span></p>
       </div>
     </div>
 
@@ -60,7 +62,7 @@
         <button mat-stroked-button color="accent" class="btn-style">ยกเลิก</button>
       </div>
       <div class="col-6">
-        <button mat-stroked-button color="accent" class="btn-style btn-border-style">บันทึก</button>
+        <button mat-stroked-button color="accent" (click)="onSave()" class="btn-style btn-border-style">บันทึก</button>
       </div>
     </div>
 
