--- a/src/app/modal/modal-create-member/modal-create-member.component.html
+++ b/src/app/modal/modal-create-member/modal-create-member.component.html
@@ -1,13 +1,13 @@
 <div class="row flex" *ngIf="approve && approve.length > 0">
-  <div class="col-12 col-md-4 col-lg-4" *ngFor="let item of approve" (click)="selectItem(item)">
+  <div class="col-12 col-md-4 col-lg-4 mb-2" *ngFor="let item of approve" (click)="selectItem(item)">
     <mat-card class="example-card cursor-pointer">
       <i class="material-icons position-check" *ngIf="selected === item">
         check_circle_outline
       </i>
       <mat-card-content>
         <h1 class="text-center">ทีม</h1>
-        <h3>{{item.name}}</h3>
-        <p class="break">{{item.detail}}</p>
+        <h3 class="ellipsis">{{item.name}}</h3>
+        <p class="break ellipsis">{{item.detail}}</p>
       </mat-card-content>
     </mat-card>
   </div>
