--- a/src/app/modal/select-option/select-option.component.html
+++ b/src/app/modal/select-option/select-option.component.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="col-12 text-right">
-        <button mat-button matStepperNext (click)="next()">Next</button>
+        <button mat-button matStepperNext (click)="next()">ถัดไป</button>
       </div>
     </form>
   </mat-step>
@@ -44,11 +44,11 @@
 
       <div class="row">
         <div class="col-6 text-left">
-          <button mat-button matStepperPrevious>Back</button>
+          <button mat-button matStepperPrevious>ย้อนกลับ</button>
 
         </div>
         <div class="col-6 text-right">
-          <button mat-button (click)="done()">Next</button>
+          <button mat-button (click)="done()">ถัดไป</button>
 
         </div>
       </div>
