--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -10,8 +10,10 @@
 </div>
 <div class="row">
   <div class="col-12">
-    <mat-nav-list class="pt-0">
+    <mat-nav-list class="pt-0" *ngIf="userAuth && userAuth.roles  && userAuth.roles.length > 0">
       <a mat-list-item (click)="onOrderList();sidenavService.closeNav();">
+        <!-- <a mat-list-item (click)="onOrderList();sidenavService.closeNav();"
+        *ngIf="userAuth.roles[0] === 'staff' || userAuth.roles[0] === 'owner' || userAuth.roles[0] === 'user'"> -->
         <img src="./../../../assets/images/shopping-bag.png" class="img-list">
         <span class="ml-3">การขาย</span>
       </a>
@@ -20,6 +22,7 @@
         <span class="ml-3">จัดสมาชิก</span>
       </a>
       <a mat-list-item>
+        <!-- <a mat-list-item *ngIf="userAuth.roles[0] === 'staff' || userAuth.roles[0] == 'owner'  || userAuth.roles[0] === 'user'"> -->
         <img src="./../../../assets/images/list.png" class="img-list">
         <span class="ml-3">จัดการรายการขาย</span>
       </a>
