--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -1,10 +1,25 @@
-<div class="row">
+<div class="row" >
   <div class="col-3 mt-3 border-list list-style list-add mr-3">
     <div class="col-12 text-center pr-0 pl-0" (click)="openmodal()">
       <span class="btn-add-style">+</span>
     </div>
   </div>
-  <div class="col-3 mt-3 border-list list-style mr-3" *ngFor="let item of dataorder">
+  <!-- <div class="col-3 mt-3 border-list list-style mr-3" *ngFor="let item of dataorder">
+    <div class="col-12 text-center pr-0 pl-0">
+      <p class="mb-1 text-overflow"><span>ออเดอร์: </span> <span>{{item.orderno}}</span></p>
+      <p class="mb-1 text-overflow"><span>ชื่อ: </span> <span class="mr-1">{{item.customer.firstname}}</span>
+        <span>{{item.customer.lastname}}</span></p>
+      <p class="mb-1 text-overflow"><span>โทร: </span> <span>{{item.customer.tel}}</span></p>
+      <p class="mb-1 text-overflow"><span>รวม: </span> <span>{{item.totalamount?item.totalamount:0 }} </span>
+        <span>บาท</span></p>
+    </div>
+    <div class="col-12 pr-0 pl-0 mr-0 text-center">
+      <button mat-stroked-button class="mr-2">เเก้ไข</button>
+      <button mat-stroked-button>ลบ</button>
+    </div>
+  </div> -->
+  
+  <div class="col-3 mt-3 border-list list-style mr-3"  *ngFor="let item of dataOrderMember">
     <div class="col-12 text-center pr-0 pl-0">
       <p class="mb-1 text-overflow"><span>ออเดอร์: </span> <span>{{item.orderno}}</span></p>
       <p class="mb-1 text-overflow"><span>ชื่อ: </span> <span class="mr-1">{{item.customer.firstname}}</span>
