--- a/src/app/pages/manage-member/manage-member.component.scss
+++ b/src/app/pages/manage-member/manage-member.component.scss
@@ -5,8 +5,13 @@
 .no-data {
     color: #ccbebe !important;
 }
-.ellipsis{
-    white-space: nowrap !important; 
+
+.ellipsis {
+    white-space: nowrap !important;
     overflow: hidden !important;
     text-overflow: ellipsis !important;
+}
+
+.font-size {
+    font-size: 2vw;
 }
