--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,9 @@
 .sidenav {
-  width: 200px;
+    width: 200px;
 }
+
+// .container {
+//     padding: 0px;
+//     margin-right: 0px;
+//     margin-left: 5px;
+// }
