--- a/src/app/pages/order/order.component.scss
+++ b/src/app/pages/order/order.component.scss
@@ -33,3 +33,8 @@
 .font-address{
     font-size: 13px;
 }
+mat-sidenav-content .container{
+    padding: 0px;
+    margin-right: 0px;
+    margin-left: 180px;
+}
