--- a/src/app/modal/select-option/select-option.component.html
+++ b/src/app/modal/select-option/select-option.component.html
@@ -1,23 +1,23 @@
 <mat-horizontal-stepper [linear]="isLinear" #stepper>
   <mat-step [stepControl]="firstFormGroup">
-    <form [formGroup]="firstFormGroup" *ngFor="let item of data.option">
+    <form [formGroup]="firstFormGroup" *ngFor="let item of dataBinding.option;let k = index">
       <ng-template matStepLabel>{{item.name}}</ng-template>
       <div class="row">
-        <div class="col-6 col-md-3 mb-3" *ngFor="let itm of item.value ;let i = index" (click)="selectProduct(itm)">
+        <div class="col-6 col-md-3 mb-3" *ngFor="let itm of item.value ;let i = index" (click)="select(itm,i,k)">
           <mat-card class="example-card card-height pt-2 text-center">
             <div class="text-center col-md-3 d-none d-md-block">
-              <i class="material-icons icon icon-position" *ngIf="checkIcon === itm">
+              <i class="material-icons icon icon-position" *ngIf="itm.active">
                 check_circle_outline
               </i>
             </div>
             <div class="col-12 d-md-none">
-              <i class="material-icons icon icon-position" *ngIf="selectOption === item">
+              <i class="material-icons icon icon-position" *ngIf="itm.active">
                 check_circle_outline
               </i>
             </div>
             <mat-card-content>
               <p>
-                {{itm}}
+                {{itm.name}}
               </p>
             </mat-card-content>
 
@@ -25,23 +25,27 @@
         </div>
       </div>
       <div class="col-12 text-right">
-        <button mat-button matStepperNext (click)="next()">ถัดไป</button>
+        <button mat-button matStepperNext (click)="next()" [disabled]="selectOption.length < 1">ถัดไป</button>
       </div>
     </form>
   </mat-step>
   <mat-step [stepControl]="secondFormGroup">
     <form [formGroup]="secondFormGroup">
       <ng-template matStepLabel>ระบุจำนวน</ng-template>
-      <div class="row">
-        <div class="col-4 text-right">
+      <div class="row" *ngFor="let optionProd of selectOption;let l = index">
+        <div class="col-2 text-right">
           <!-- <button mat-button class="border-add"><span class="font-size">-</span></button> -->
         </div>
-        <div class="col-4 border-num text-center">
-          <mat-form-field class="example-full-width">
-            <input class="font-input" none-line matInput [(ngModel)]="qty" formControlName="secondCtrl" required>
+        <div class="col-8 text-center">
+          <span class="mr-3">ตัวเลือก: </span>
+          <span class="mr-3">{{optionProd.name}}</span>
+          <mat-form-field>
+            <!-- <input class="font-input" matInput [(ngModel)]="qty" formControlName="secondCtrl" required> -->
+            <input matInput placeholder="กรุณากรอกจำนวนสินค้า" (ngModelChange)=addQty(l,$event) [value]="!optionProd.qty ? 1 : optionProd.qty"
+              formControlName="secondCtrl">
           </mat-form-field>
         </div>
-        <div class="col-4 text-left">
+        <div class="col-2 text-left">
           <!-- <button mat-button class="border-add"> <span class="font-size">+</span> </button> -->
         </div>
       </div>
@@ -52,7 +56,7 @@
 
         </div>
         <div class="col-6 text-right">
-          <button mat-button (click)="done()">ถัดไป</button>
+          <button mat-button (click)="done()">เสร็จสิ้น</button>
 
         </div>
       </div>
