--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -24,19 +24,33 @@
 
     <div class="border-order scroll" style="width: 100%;height: 290px;">
       <span *ngFor="let item of data.items">
-        <div class="row mt-3">
-          <div class="col-6 text-left">
-            <p class="ml-4 mb-3"> <span>{{item.name}}</span> <span>({{item.option[0].value}})</span></p>
+        <div class="row mt-2">
+          <div class="col-12 text-left">
+            <p class="ml-4 mb-1"> <span>{{item.name}}</span></p>
           </div>
-          <div class="col-3 text-center">
+          <div class="col-12" *ngFor="let itm of item.option">
+            <div class="row" *ngFor="let it of itm.value">
+              <div class="col-4 text-right">
+                <span class="font-color" style="font-size: 13px">{{it.name}}</span>
+              </div>
+              <div class="col-4 text-right"><span class="font-color" style="font-size: 13px">{{it.qty}}</span> <span
+                  class="font-color"> * </span> <span style="font-size: 13px" class="font-color">{{item.price}}</span>
+              </div>
+              <div class="col-4 text-center"> <span class="font-color"
+                  style="font-size: 13px">{{it.qty * item.price}}</span> </div>
+            </div>
+          </div>
+          <div class="col-8 text-right">รวม</div>
+          <div class="col-4 text-center">{{item.amout}}</div>
+          <!-- <div class="col-3 text-center">
             <p class="mb-3"> <span class="mr-1">{{item.price}}</span> <span class="mr-1">*</span> <span
                 class="mr-1">{{item.qty}}</span></p>
           </div>
           <div class="col-3 text-right">
             <p class="mr-4 mb-3"> <span>{{item.amout}}</span></p>
-          </div>
+          </div> -->
         </div>
-        <div class="row">
+        <div class="row mt-2">
           <div class="col-1"></div>
           <div class="col-2 border-prod-list"></div>
           <div class="col-2 border-prod-list"></div>
@@ -48,14 +62,15 @@
       </span>
     </div>
     <div class="row">
-      <div class="col-6 text-left">
-        <p class="ml-3 mt-3">ประเภทการชำระเงิน</p>
+      <div class="col-12 col-md-5 text-left">
+        <p class="ml-3 mt-3 ellipsis">ประเภทการชำระเงิน</p>
       </div>
-      <div class="col-6 text-right">
-        <mat-form-field>
+      <div class="col-12 col-md-7 text-right">
+        <mat-form-field class="example-full-width">
           <mat-select placeholder="กรุณาเลือกประเภทการชำระเงิน">
             <mat-option>None</mat-option>
-            <mat-option *ngFor="let item of paymentType" [value]="item" (click)="selectPaymentType(item)">{{item}}</mat-option>
+            <mat-option *ngFor="let item of paymentType" [value]="item" (click)="selectPaymentType(item)">{{item}}
+            </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
